Made changes to design and added responsiveness
Media query breakpoints were used to make design responsive.
Also overall design improvements were done to make the webpage look good.

--- a/Week-1/Exercise1.2/index.html
+++ b/Week-1/Exercise1.2/index.html
@@ -12,16 +12,16 @@
 </head>
 <body>
     <!-- left side navigation bar used as aside -->
-    <aside>
-        <i class="fa-solid fa-bars nav-icon"></i> <br>
-        <i class="fa-solid fa-house-chimney nav-icon"></i> <br>
-        <i class="fa-solid fa-magnifying-glass nav-icon"></i> <br>
-        <i class="fa-solid fa-volume-high nav-icon"></i> <br>
-        <i class="fa-solid fa-user nav-icon"></i> <br>
-        <i class="fa-brands fa-spotify nav-icon"></i> <br>
-        <i class="fa-solid fa-gear nav-icon"></i> <br>
+    <nav>
+        <i class="fa-solid fa-bars nav-icon"></i>
+        <i class="fa-solid fa-house-chimney nav-icon"></i> 
+        <i class="fa-solid fa-magnifying-glass nav-icon"></i> 
+        <i class="fa-solid fa-volume-high nav-icon"></i>
+        <i class="fa-solid fa-user nav-icon"></i>
+        <i class="fa-brands fa-spotify nav-icon"></i>
+        <i class="fa-solid fa-gear nav-icon"></i>
         <i class="fa-brands fa-soundcloud nav-icon"></i>
-    </aside>
+    </nav>
     
 
     <!-- main used as content other than navigation bar -->
@@ -50,25 +50,25 @@
            <!-- table of songs and details -->
            <table>
             <tr>
-                <td>1.One Dance</td>
+                <td>1. One Dance</td>
                 <td>Crake feat CatKid & Cyla</td>
                 <td>2:54</td>
                 <td class="catty"><a href="">CATTY LOUD SYNC</a></td>
             </tr>
             <tr class="grey-row">
-                <td>2.Panda</td>
+                <td>2. Panda</td>
                 <td>Cattee</td>
                 <td>4:06</td>
                 <td class="catty"><a href="">CATTY LOUD SYNC</a></td>
             </tr>
             <tr>
-                <td>3.Can't Stop the Feeling</td>
+                <td>3. Can't Stop the Feeling!</td>
                 <td>Catin Climberlake</td>
                 <td>3:56</td>
                 <td class="catty"><a href="">CATTY LOUD SYNC</a></td>
             </tr>
             <tr class="grey-row">
-                <td>4.Work From Home</td>
+                <td>4. Work From Home</td>
                 <td>Cat Harmony feat Colla</td>
                 <td>3:34</td>
                 <td class="catty"><a href="">CATTY LOUD SYNC</a></td>
@@ -84,7 +84,7 @@
                  <p>If It Ain't Love</p>
                  <p class="artist-name">Catson Derulo</p>
              </section>   
-            </section>   
+          </section>   
         <!--  to space icons evenly -->
           <i class="fa-solid fa-backward-step"></i>
           <i class="fa-solid fa-pause"></i>
